--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,12 @@
         <scope>test</scope>
     </dependency> 
 
+    
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-test</artifactId>
+        <version>5.1.9.RELEASE</version>
+      </dependency>
     </dependencies>
 
     <build>
