--- a/pom.xml
+++ b/pom.xml
@@ -161,6 +161,16 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+		     <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                    <!-- Define the main class -->
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <mainClass>com.example.Application</mainClass> <!-- Replace with your main class -->
+                        </manifest>
+                    </archive>
+                </configuration>
             </plugin>
         </plugins>
     </build>
